# world-cup-2026

./: .env.docker.example  .env.prod.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
world-cup-agents/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  main.py  pyproject.toml
world-cup-agents/agents/bets_agent/: bets_agent.py  bets_agent_prompts.py  bets_tools.py
world-cup-agents/agents/matches_agent/: agent.py  agent_v2.py  matchup_tools.py  prompts.py  tools.py
world-cup-agents/agents/news_agent/: news_agent.py  news_agent_prompts.py  news_tools.py
world-cup-agents/graph/: graph_v1.py  graph_v2.py
world-cup-agents/utils/: url_builder_util.py
world-cup-server/: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pom.xml
world-cup-server/src/main/resources/: application-local.properties.example  application.properties
world-cup-web/: .dockerignore  .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
world-cup-web/src/app/: globals.css  layout.tsx  page.tsx
world-cup-web/src/app/agent/: actions.ts  page.tsx
world-cup-web/src/app/groups/: page.tsx
world-cup-web/src/app/leaderboard/: page.tsx
world-cup-web/src/app/markets/: page.tsx
world-cup-web/src/app/matches/: page.tsx
world-cup-web/src/app/news/: page.tsx
world-cup-web/src/app/odds/: page.tsx
world-cup-web/src/app/teams/: page.tsx
world-cup-web/src/lib/: match-lookup.ts  match-time.ts  matches.ts  news.ts  predictions.ts  standings.ts  teams.ts  tournament.ts  utils.ts
(+186 files in other folders)
